modified index.html page with footer

--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
     <body>
         <h1>my name is noora</h1>
     </body>
+    <footer>
+        <ul>
+            <li>about </li>
+            <li>contact</li>
+        </ul>
+    </footer>
 </html>
